Text overflow fix(?)

--- a/main/static/css/CP-S.css
+++ b/main/static/css/CP-S.css
@@ -4,8 +4,7 @@
 }
 
 .tabset .tab-panel {
-  white-space: normal;
-  word-break: break-all;
+  overflow-wrap: anywhere;
   display: none;
 }
 
